--- a/index.css
+++ b/index.css
@@ -2,3 +2,7 @@ body.dark-mode {
     background-color: #121212;
     color: #ffffff;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
